test/chainsaw/tests/aim-gpu/regression/aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4/service.yaml
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMService
metadata:
  name: aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4
spec:
  model:
    image: amdenterpriseai/aim-mistralai-mixtral-8x7b-instruct-v0-1:0.8.4
