test/chainsaw/tests/aim-gpu/regression/aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4
spec:
  description: Regression test for amdenterpriseai/aim-mistralai-mixtral-8x7b-instruct-v0-1:0.8.4
  steps:
  - name: Create service
    try:
    - apply:
        file: service.yaml

  - name: Check for Degraded or Failed state
    try:
    - error:
        timeout: 1m
        resource:
          apiVersion: aim.silogen.ai/v1alpha1
          kind: AIMService
          metadata:
            name: aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4
          status:
            (status == 'Degraded' || status == 'Failed'): true
  - name: Verify service becomes ready
    try:
    - assert:
        timeout: 20m
        resource:
          apiVersion: aim.silogen.ai/v1alpha1
          kind: AIMService
          metadata:
            name: aim-amdenterpriseai-aim-mistralai-mixtral-8x7b-instruct-v0-1-0-8-4
          status:
            status: Running
            (conditions[?type == 'RuntimeReady']):
            - status: "True"
